deploy/frontend/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: junon-frontend
  labels:
    app: junon-frontend
spec:
  type: ClusterIP
  selector:
    app: junon-frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
